fix(component): fix nav display on mobile
With extra nav items there is not enough space. For now move nav items to a new line on small
screens

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -18,11 +18,16 @@
 
 	@include respond-to(extra-small) {
 		@include font-size($h3-font-size);
+		width: 100%;
 	}
 }
 
 .header-nav {
 	float: right;
+
+	@include respond-to(extra-small) {
+		float: left;
+	}
 }
 
 .header-nav-link {
